--- a/.tmux.conf
+++ b/.tmux.conf
@@ -19,6 +19,7 @@ bind -t vi-copy y copy-selection
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
 set -g base-index 1
+set-option -g allow-rename off
 
 bind | split-window -h
 bind - split-window -v
@@ -26,20 +27,22 @@ bind - split-window -v
 #set -g set-titles on
 #set -g set-titles-string '#(whoami)@#(hostname)'
 
-set -g status-utf8 on
 set -g status-left-length 40
 set -g status-right-length 150
 set -g window-status-activity-attr bold
 set -g message-attr bold
 set -g window-status-format "#I #W "
 set -g status-left '#[fg=white,bg=black,bold] #S #[fg=yellow,bg=black,nobold] #H '
-set -g status-right '%Y-%m-%d %H:%M '
+set -g status-right '#(pomodoro status) %Y-%m-%d %H:%M '
+# 🍅
 set -g window-status-current-format " #I #W "
 
-unbind Up
-bind Up new-window -d -n tmux-zoom \; swap-pane -s tmux-zoom \; select-window -t tmux-zoom
-unbind Down
-bind Down last-window \; swap-pane -s tmux-zoom \; kill-window -t tmux-zoom
+unbind-key ^o
+
+#unbind Up
+#bind Up new-window -d -n tmux-zoom \; swap-pane -s tmux-zoom \; select-window -t tmux-zoom
+#unbind Down
+#bind Down last-window \; swap-pane -s tmux-zoom \; kill-window -t tmux-zoom
 
 #vim based pane navigation
 unbind-key j
@@ -82,3 +85,4 @@ set-option -g display-panes-colour brightred #orange
 
 # clock
 set-window-option -g clock-mode-colour green #green
+
