--- a/.gitconfig
+++ b/.gitconfig
@@ -1,53 +1,79 @@
 [user]
-	name = Micheal Jones
-	email = micheal@mcjones.ca
+  name = Micheal Jones
+  email = micheal@mcjones.ca
 
 [core]
-    excludesfile = "/Users/micheal/.gitignore"
-    filemode = false
+  excludesfile = /Users/micheal/.gitignore
+  filemode = false
 
 [pull]
-    rebase = true
+  rebase = true
+
+[fetch]
+  #fsckobjects = true
+
+[transfer]
+  #fsckobjects = true
+
+[receive]
+  #fsckobjects = true
 
 [color]
-    ui = auto
-    diff = auto
-    status = auto
-    branch = auto
-    interactive = auto
+  ui = auto
+  diff = auto
+  status = auto
+  branch = auto
+  interactive = auto
 
 [branch]
-    autosetuprebase = always
+  autosetuprebase = always
 
 [branch "master"]
-    mergeoptions = --no-ff
+  mergeoptions = --no-ff
 
 [branch]
-    mergeoptions = --no-ff
-    autosetuprebase = always
+  mergeoptions = --no-ff
+  autosetuprebase = always
 
 [merge]
-    log = true
-    tool = fugitive
+  log = true
+  tool = fugitive
 
 [mergetool "fugitive"]
-    cmd = vim -f -c \"Gdiff\" \"$MERGED\"
+  cmd = vim -f -c \"Gdiff\" \"$MERGED\"
 
 [alias]
-    st = status
-    ci = commit
-    co = checkout
-    df = diff
-    #lg = log -p
-    br = branch
-    p = pull --rebase --ff-only
-    lg = log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit --date=relative
-    lgg = log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit --date=relative --name-only
-    ll = log --pretty=format:"%C(yellow)%h%Cred%d\\ %Creset%s%Cblue\\ [%cn]" --decorate --numstat
-    ld = log --pretty=format:"%C(yellow)%h\\ %C(green)%ad%Cred%d\\ %Creset%s%Cblue\\ [%cn]" --decorate --date=short --graph
-    ls = log --pretty=format:"%C(green)%h\\ %C(yellow)[%ad]%Cred%d\\ %Creset%s%Cblue\\ [%cn]" --decorate --date=relative
+  st = status
+  ci = commit
+  co = checkout
+  df = diff
+  #lg = log -p
+  br = branch
+  p = pull --rebase --ff-only
+  lg = log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit --date=relative
+  lgg = log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit --date=relative --name-only
+  ll = log --pretty=format:"%C(yellow)%h%Cred%d\\ %Creset%s%Cblue\\ [%cn]" --decorate --numstat
+  ld = log --pretty=format:"%C(yellow)%h\\ %C(green)%ad%Cred%d\\ %Creset%s%Cblue\\ [%cn]" --decorate --date=short --graph
+  ls = log --pretty=format:"%C(green)%h\\ %C(yellow)[%ad]%Cred%d\\ %Creset%s%Cblue\\ [%cn]" --decorate --date=relative
 
 [push]
-    default=simple
+  default=simple
+
 [status]
-	submoduleSummary = true
+  submoduleSummary = true
+
+[github]
+  user = Chealion
+
+[gitreview]
+  username = Chealion
+
+[credential]
+  helper = osxkeychain
+
+[difftool "sourcetree"]
+  cmd = opendiff \"$LOCAL\" \"$REMOTE\"
+
+[mergetool "sourcetree"]
+  cmd = /Applications/SourceTree.app/Contents/Resources/opendiff-w.sh \"$LOCAL\" \"$REMOTE\" -ancestor \"$BASE\" -merge \"$MERGED\"
+  trustExitCode = true
