--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,16 +5,17 @@ set -g status-keys vi
 setw -g mode-keys vi
 bind Escape copy-mode
 #Linux copy settings
-bind -t vi-copy v begin-selection
-bind -t vi-copy y copy-selection
+#bind -t vi-copy v begin-selection
+#bind -t vi-copy y copy-selection
 
 # Mac only items (http://robots.thoughtbot.com/tmux-copy-paste-on-os-x-a-better-future)
 #set-option -g default-command "reattach-to-user-namespace -l zsh"
+set-option -g default-command ""
 #bind-key -t vi-copy v begin-selection
 #bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
 #unbind -t vi-copy Enter
 #bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
-#set-option -g default-shell /bin/zsh
+set-option -g default-shell /bin/zsh
 
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
@@ -32,7 +33,7 @@ set -g status-right-length 150
 set -g window-status-activity-attr bold
 set -g message-attr bold
 set -g window-status-format "#I #W "
-set -g status-left '#[fg=white,bg=black,bold] #S #[fg=yellow,bg=black,nobold] #H '
+set -g status-left '#[fg=yellow,bg=white,bold] #S #[fg=yellow,bg=white,nobold] #H '
 set -g status-right '#(pomodoro status) %Y-%m-%d %H:%M '
 # 🍅
 set -g window-status-current-format " #I #W "
@@ -56,13 +57,15 @@ bind-key l select-pane -R
 
 # SOLARIZED COLOUR SCHEME (https://github.com/seebi/tmux-colors-solarized/blob/master/tmuxcolors-dark.conf)
 
+#### COLOUR (Solarized light)
+
 # default statusbar colors
-set-option -g status-bg black #base02
+set-option -g status-bg white #base2
 set-option -g status-fg yellow #yellow
 set-option -g status-attr default
 
 # default window title colors
-set-window-option -g window-status-fg brightblue #base0
+set-window-option -g window-status-fg brightyellow #base00
 set-window-option -g window-status-bg default
 #set-window-option -g window-status-attr dim
 
@@ -72,11 +75,11 @@ set-window-option -g window-status-current-bg default
 #set-window-option -g window-status-current-attr bright
 
 # pane border
-set-option -g pane-border-fg black #base02
-set-option -g pane-active-border-fg brightgreen #base01
+set-option -g pane-border-fg white #base2
+set-option -g pane-active-border-fg brightcyan #base1
 
 # message text
-set-option -g message-bg black #base02
+set-option -g message-bg white #base2
 set-option -g message-fg brightred #orange
 
 # pane number display
@@ -86,3 +89,5 @@ set-option -g display-panes-colour brightred #orange
 # clock
 set-window-option -g clock-mode-colour green #green
 
+# bell
+set-window-option -g window-status-bell-style fg=white,bg=red #base2, red
