Overhaul tmux config

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,49 +1,64 @@
-# tmux configuration using Joe's details and others
+# My tmux config
+
+# unbind default prefix and set it to ctrl-a
+unbind C-b
+set -g prefix C-a
+bind C-a send-prefix
 
 #Copy and Paste items first up
 set -g status-keys vi
 setw -g mode-keys vi
 bind Escape copy-mode
-#Linux copy settings
-#bind -t vi-copy v begin-selection
-#bind -t vi-copy y copy-selection
 
-# Mac only items (http://robots.thoughtbot.com/tmux-copy-paste-on-os-x-a-better-future)
-#set-option -g default-command "reattach-to-user-namespace -l zsh"
-set-option -g default-command ""
-#bind-key -t vi-copy v begin-selection
-#bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
-#unbind -t vi-copy Enter
-#bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
-set-option -g default-shell /bin/zsh
+#Mac Copy/Paste fixes - allows using Control-C and Control-V to send/get tmux from pasteboard
+bind-key -T copy-mode-vi C-c send-keys -X copy-pipe-and-cancel "pbcopy"
+bind-key -T copy-mode-vi C-v send-keys -X paste-pipe-and-cancel "pbpaste"
+
+#Vim copy settings
+bind-key -T copy-mode-vi 'v' send-keys -X begin-selection
+bind-key -T copy-mode-vi 'y' send-keys -X copy-selection
 
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
+set -s escape-time 1
+
+# Set base indexes
 set -g base-index 1
+setw -g pane-base-index 1
+
 set-option -g allow-rename off
 
+# y = synchronize
+bind y setw synchronize-panes
+
+# Panes!
+# % and | split vertically
 bind | split-window -h
+bind \ split-window -h -c "#{pane_current_path}"
+# " and - split horizontally
 bind - split-window -v
+bind _ split-window -v -c "#{pane_current_path}"
 
-#set -g set-titles on
-#set -g set-titles-string '#(whoami)@#(hostname)'
-
+# Status bar details
+set -g status-utf8 on
+set -g utf8 on
 set -g status-left-length 40
 set -g status-right-length 150
-set -g window-status-activity-attr bold
-set -g message-attr bold
+
+set -g window-status-activity-style bold
+set -g message-style bold
 set -g window-status-format "#I #W "
 set -g status-left '#[fg=yellow,bg=white,bold] #S #[fg=yellow,bg=white,nobold] #H '
 set -g status-right '#(pomodoro status) %Y-%m-%d %H:%M '
+set -g status-justify centre
+
 # 🍅
 set -g window-status-current-format " #I #W "
 
-unbind-key ^o
+# Mouse
+set -g mouse off
 
-#unbind Up
-#bind Up new-window -d -n tmux-zoom \; swap-pane -s tmux-zoom \; select-window -t tmux-zoom
-#unbind Down
-#bind Down last-window \; swap-pane -s tmux-zoom \; kill-window -t tmux-zoom
+unbind-key ^o
 
 #vim based pane navigation
 unbind-key j
@@ -55,39 +70,48 @@ bind-key h select-pane -L
 unbind-key l
 bind-key l select-pane -R
 
-# SOLARIZED COLOUR SCHEME (https://github.com/seebi/tmux-colors-solarized/blob/master/tmuxcolors-dark.conf)
+# SOLARIZED COLOUR SCHEME (https://github.com/seebi/tmux-colors-solarized/)
 
 #### COLOUR (Solarized light)
 
 # default statusbar colors
-set-option -g status-bg white #base2
-set-option -g status-fg yellow #yellow
-set-option -g status-attr default
+#light
+set-option -g status-style bg=white,fg=yellow,default
+#dark
+#set-option -g status-style bg=black,fg=yellow,default
 
 # default window title colors
-set-window-option -g window-status-fg brightyellow #base00
-set-window-option -g window-status-bg default
-#set-window-option -g window-status-attr dim
+#light
+set-window-option -g window-status-style fg=brightyellow,bg=default,dim
+#dark
+#set-window-option -g window-status-style fg=brightblue,bg=default,dim
 
 # active window title colors
-set-window-option -g window-status-current-fg brightred #orange
-set-window-option -g window-status-current-bg default
-#set-window-option -g window-status-current-attr bright
+#light and dark
+#bg is white instead of default to hilight more
+set-window-option -g window-status-current-style fg=brightred,bg=white,bright
 
 # pane border
-set-option -g pane-border-fg white #base2
-set-option -g pane-active-border-fg brightcyan #base1
+set-option -g pane-border-style fg=white
+set-option -g pane-active-border-style fg=brightcyan
+#dark
+#set-option -g pane-border-style fg=black
+#set-option -g pane-active-border-style fg=brightgreen
 
 # message text
-set-option -g message-bg white #base2
-set-option -g message-fg brightred #orange
+#light
+set-option -g message-style bg=white,fg=brightred
+#dark
+#set-option -g message-style bg=black,fg=brightred
 
 # pane number display
-set-option -g display-panes-active-colour blue #blue
-set-option -g display-panes-colour brightred #orange
+set-option -g display-panes-active-colour blue
+set-option -g display-panes-colour brightred
 
 # clock
 set-window-option -g clock-mode-colour green #green
 
 # bell
 set-window-option -g window-status-bell-style fg=white,bg=red #base2, red
+#dark
+#set-window-option -g window-status-bell-style fg=black,bg=red #base2, red
