--- a/.tmux.conf
+++ b/.tmux.conf
@@ -34,14 +34,12 @@ bind y setw synchronize-panes
 # Panes!
 # % and | split vertically
 bind | split-window -h
-bind \ split-window -h -c "#{pane_current_path}"
+bind \\ split-window -h -c "#{pane_current_path}"
 # " and - split horizontally
 bind - split-window -v
 bind _ split-window -v -c "#{pane_current_path}"
 
 # Status bar details
-set -g status-utf8 on
-set -g utf8 on
 set -g status-left-length 40
 set -g status-right-length 150
 
