tmux 3.3 / homebrew fix

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -113,3 +113,6 @@ set-window-option -g clock-mode-colour green #green
 set-window-option -g window-status-bell-style fg=white,bg=red #base2, red
 #dark
 #set-window-option -g window-status-bell-style fg=black,bg=red #base2, red
+
+# tmux 3.3 / Homebrew package fix
+set-option -g default-terminal screen-256color
