--- a/.gitconfig
+++ b/.gitconfig
@@ -36,18 +36,13 @@
   interactive = auto
 
 [branch]
-  autosetuprebase = always
-
-[branch "master"]
-  mergeoptions = --no-ff
-
-[branch]
   mergeoptions = --no-ff
   autosetuprebase = always
 
 [merge]
   log = true
   tool = fugitive
+  conflictstyle = diff3
 
 [mergetool "fugitive"]
   cmd = vim -f -c \"Gdiff\" \"$MERGED\"
@@ -67,7 +62,11 @@
   ls = log --pretty=format:"%C(green)%h\\ %C(yellow)[%ad]%Cred%d\\ %Creset%s%Cblue\\ [%cn]" --decorate --date=relative
 
 [push]
-  default=simple
+  default = simple
+  autosetupremote = true
+
+[rebase]
+  autostash = true
 
 [status]
   submoduleSummary = true
